# oneshot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI_USAGE_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATION_FIX.md  DYNAMIC_INSTALLATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TRANSFORMATION_SUMMARY.md  VERCEL_BUG_FIX_SUMMARY.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: api.md  changelog.md  cli.md  examples.md  faq.md  getting-started.md  index.md  installation.md  model-setup.md  server-specs.md  troubleshooting.md
examples/: dynamic_agent.py  test_context7_flow.py  use_agent.py
examples/servers/: math_server.py
src/deepmcpagent/: __init__.py  __main__.py  agent.py  cli.py  clients.py  config.py  orchestrator.py  prompt.py  registry.py  tools.py
src/oneshotmcp/: __init__.py  __main__.py  _warnings.py  agent.py  cli.py  clients.py  config.py  local_installer.py  oauth.py  orchestrator.py  registry.py  tools.py
tests/: __init__.py  test_agent.py  test_cli_parse.py  test_config.py  test_config_stdio_fix.py  test_integration_stdio_install.py  test_interactive_oauth.py  test_interactive_oauth_e2e.py  test_keyword_extraction.py  test_local_installation_fallback.py  test_local_mcp_installer.py  test_oauth.py  test_oauth_integration.py  test_orchestrator.py  test_orchestrator_oauth.py  test_orchestrator_ranking_fix.py  test_package_validation.py  test_registry.py  test_tools_schema.py  test_vercel_installation.py  test_vercel_scenario_e2e.py
tests/fixtures/: __init__.py  mock_oauth.py
