[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmcpagent"
version = "0.3.0"
description = "DeepMCPAgent: LangChain/LangGraph agents powered by MCP tools over FastMCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "cryxnet" }]
keywords = ["mcp", "fastmcp", "langchain", "langgraph", "agents", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "fastmcp>=2.4.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.39",
  "pydantic>=2.8.2",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "anyio>=4.4.0",
]

[project.optional-dependencies]
deep = ["deepagents>=0.0.5rc1"]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.1",
]

examples = [
  "python-dotenv>=1.0.1",
  "langchain-openai>=0.1.0",
]

dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "mypy>=1.10.0",
  "ruff>=0.5.5",
]

[project.scripts]
deepmcpagent = "deepmcpagent.cli:app"

[project.urls]
Homepage = "https://github.com/cryxnet/deepmcpagent"
Issues = "https://github.com/cryxnet/deepmcpagent/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepmcpagent*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
deepmcpagent = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","C4","SIM","ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
