[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepmcpagent"
dynamic = ["version"]
description = "DeepMCPAgent: LangChain/LangGraph agents powered by MCP tools over FastMCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "cryxnet" }]
keywords = ["mcp", "fastmcp", "langchain", "langgraph", "agents", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "fastmcp>=2.12.2", 
  "langchain>=0.3.27",
  "pydantic>=2.8",
  "typer>=0.15.2",
  "rich>=14",
  "anyio>=4.5",
  "python-dotenv>=1.1",
  "langgraph>=0.6,<0.7",
  "langgraph-prebuilt>=0.6,<0.7",
]
[project.optional-dependencies]
deep = [
  "deepagents>=0.0.5,<1.0"
]

docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.29",
]


examples = [
  "langchain-openai>=0.3.30",
]

dev = [
  "pytest>=8.4",
  "pytest-asyncio>=1.1",
  "mypy>=1.17",
  "ruff>=0.12",
]

[project.scripts]
deepmcpagent = "deepmcpagent.cli:app"

[project.urls]
Homepage = "https://github.com/cryxnet/deepmcpagent"
Issues = "https://github.com/cryxnet/deepmcpagent/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepmcpagent*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
deepmcpagent = ["py.typed"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E","F","I","UP","B","C4","SIM","ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
